[metadata]
name = rubberband
version = 1.0.2
description = Simple wrapper for librubberband
url = https://gitlab.com/jdstmporter/rband.git
platforms = 
	MacOS
	Linux
author = Julian Porter
author_email = julian@porternet.org
license = BSD3
setup_requires =
	numpy >= 1.18
install-requires =
	numpy >= 1.18
requires-external = 
	C++
	libsndfile >=1.0
	librubberband >=1.8
keywords = 
	audio stretch
	rubberband
	voice processing
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Artistic Software
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Analysis
    Topic :: Multimedia :: Sound/Audio :: Editors
    Topic :: Multimedia :: Sound/Audio :: Speech
  
[options]
zip_safe = True
include_package_data = True
tests_require = 
	numpy >= 1.18
	soundfile >= 0.10
	